--- a/style.css
+++ b/style.css
@@ -233,7 +233,6 @@ header nav.menu-destop ul li{
     flex-wrap: wrap;
     background-color: black;
     color: white;
-    width: 100vw;
 }
 
 .container-sobre {
@@ -470,3 +469,30 @@ footer .copy{
     }
 
 }
+
+ /* Carrossel */
+
+ @media screen and (max-width: 650px){
+     /* Carrossel */
+    .carrossel img{
+        height: 80px;
+        object-fit: cover;
+        width: calc(100%  / 3);
+        margin-left: 60px;
+    }
+
+}
+
+@media screen and (max-width: 376px){
+    /* Carrossel */
+   .carrossel img{
+       height: 80px;
+       object-fit: cover;
+       width: calc(100%  / 2);
+       margin-left: 60px;
+   }
+
+}
+ 
+
+    
