--- a/style.css
+++ b/style.css
@@ -157,7 +157,7 @@ header nav.menu-destop ul li{
 }
 
 
-/* Projetos Realizados */
+/* carrossel de equipes*/
 
 .img-proj{
     display: flex;
@@ -175,7 +175,6 @@ header nav.menu-destop ul li{
     top: 50%;
     height: 50px;
     width: 50px;
-    margin: 0 -20px;
     font-size: 1.5rem;
     font-weight: bolder;
     cursor: pointer;
