--- a/style.css
+++ b/style.css
@@ -136,12 +136,8 @@ header nav.menu-destop ul li{
 
 /*banner*/
 
-.banner-image {
-    position: relative;
-    background: url(imagens/banner.png) no-repeat center;
-    background-size: cover;
-    height: 500px;
-    overflow: hidden;
+.banner-image img{
+    width: 100%;
 }
 
 /*Classificação*/ 
@@ -422,14 +418,6 @@ footer .copy{
 
     header > .container-header{
         justify-content: space-between;
-    }
-
-    .banner-image{
-        position: relative;
-        background-size: cover;
-        height: 369px;
-        overflow: hidden;
-        background: url(imagens/banner-mobile.png) no-repeat center;
     }
 
     .formulario{
